--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -54,4 +54,12 @@
         android:layout_height="wrap_content"
         android:text="Submit" />
 
+    <ProgressBar
+        android:id="@+id/pbSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:max="100" />
+
 </LinearLayout>
