--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -36,6 +36,7 @@
         android:id="@+id/ivImage"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
