--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -59,28 +59,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_below="@id/rvComments"
-        android:layout_width="match_parent"
+
+
+    <Button
+        android:id="@+id/btnComment"
+        android:layout_gravity="bottom"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:layout_alignParentEnd="true"
+        tools:text="Comment" />
 
-        <EditText
-            android:id="@+id/etComment"
-            android:layout_gravity="bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Write a comment" />
-
-        <Button
-            android:id="@+id/btnComment"
-            android:layout_gravity="bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Comment" />
-
-    </LinearLayout>
+    <EditText
+        android:id="@+id/etComment"
+        android:layout_below="@+id/rvComments"
+        android:layout_width="250dp"
+        android:layout_alignTop="@+id/btnComment"
+        android:layout_height="wrap_content"
+        android:hint="Write a comment" />
 
 
 </RelativeLayout>
