--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_margin="20dp"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".LoginActivity"
+    tools:context=".activities.LoginActivity"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
