--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     android:layout_marginBottom="10dp"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -63,6 +64,7 @@
             android:layout_width="20dp"
             android:layout_height="25dp"
             android:layout_alignTop="@+id/btnLike"
+            android:textColor="@android:color/black"
             android:layout_marginStart="5dp"
             android:layout_toEndOf="@+id/btnLike"
             android:fontFamily="@font/open_sans"
@@ -79,7 +81,7 @@
         android:layout_below="@id/ivImage"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/open_sans"
-        android:textColor="@color/black"
+        android:textColor="@color/text_color"
         android:textSize="16sp"
         tools:text="trying to look hipster" />
 
@@ -121,6 +123,7 @@
         android:layout_marginEnd="10dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/open_sans_semibold"
+        android:textColor="@color/text_color_2"
         android:text="Post"
         android:textAllCaps="false" />
 
