--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_weight="1"
-        app:srcCompat="@drawable/nav_logo_whiteout" />
+        android:layout_marginBottom="10dp"
+        app:srcCompat="@drawable/instragram_logo" />
 
     <EditText
         android:id="@+id/etUsername"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_weight="1"
+        android:textColor="@android:color/black"
         android:background="@drawable/edittextround"
         android:ems="10"
         android:fontFamily="@font/open_sans"
@@ -33,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="@android:color/black"
         android:layout_weight="1"
         android:background="@drawable/edittextround"
         android:ems="10"
@@ -47,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
+        android:textColor="@color/text_color_2"
         android:backgroundTint="@color/blue"
         android:text="Log In"
         android:textAllCaps="false"
@@ -58,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:backgroundTint="@color/green"
+        android:textColor="@color/text_color_2"
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textSize="20dp" />
