--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/background_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
@@ -13,16 +14,49 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@color/white"
+        android:background="@color/background_color"
         android:minHeight="?attr/actionBarSize"
         app:titleTextColor="@android:color/white">
 
         <ImageView
             android:id="@+id/ivInstagram"
-            android:layout_width="150dp"
+            android:layout_width="130dp"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            app:srcCompat="@drawable/nav_logo_whiteout" />
+            android:layout_marginTop="12dp"
+            app:srcCompat="@drawable/instragram_logo"/>
+
+        <RelativeLayout
+            android:id="@+id/rlMode"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/ivDay"
+                android:layout_width="30dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="10dp"
+                android:layout_height="30dp"
+                android:layout_toStartOf="@+id/switchMode"
+                app:srcCompat="@drawable/ic_sun" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchMode"
+                android:layout_marginTop="5dp"
+                android:layout_toStartOf="@id/ivNight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/ivNight"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="15dp"
+                app:srcCompat="@drawable/ic_night" />
+
+        </RelativeLayout>
 
     </androidx.appcompat.widget.Toolbar>
 
