--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="16dp"
+    android:background="@color/background_color"
     tools:context=".fragments.PostsFragment">
 
     <ImageView
         android:id="@+id/ivProfile"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -18,7 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/ivProfile"
         android:fontFamily="@font/open_sans_semibold"
         android:text="TextView"
@@ -34,18 +34,19 @@
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/ivProfile"
         android:backgroundTint="@color/blue"
+        android:textColor="@color/text_color_2"
         android:fontFamily="@font/open_sans_semibold"
         android:text="Change Picture"
         android:textAllCaps="false" />
 
     <Button
         android:id="@+id/btnLogout"
+        android:textColor="@color/background_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/btnUpload"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="12dp"
         android:layout_toEndOf="@id/btnUpload"
         android:fontFamily="@font/open_sans_semibold"
         android:text="Logout"
@@ -64,8 +65,7 @@
             android:id="@+id/rvPosts"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:padding="8dp" />
+            android:layout_centerInParent="true" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
