--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -53,7 +53,7 @@
         android:layout_margin="12dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/open_sans"
-        android:textColor="@color/black"
+        android:textColor="@color/text_color"
         android:textSize="16sp"
         tools:text="trying to look hipster" />
 
