--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,13 +5,13 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="text_color">#FF000000</color>
+    <color name="text_color_2">#FFFFFFFF</color>
+    <color name="background_color">#FFFFFFFF</color>
     <color name="blue">#1877F2</color>
     <color name="red">#FD1D1D</color>
     <color name="light_gray">#F5F5F5</color>
-    <color name="purple">#C13584</color>
     <color name="green">#5CB85C</color>
-    <color name="gray">#8C8C94</color>
+    <color name="btn_color">#8C8C94</color>
 
 </resources>
