--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/background_color"
@@ -26,12 +25,13 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="New Post"
+        android:text="@string/new_post"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="25sp" />
 
     <EditText
         android:id="@+id/etDescription"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvNewPost"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="5dp"
         android:ems="10"
         android:fontFamily="@font/open_sans"
-        android:hint="Write a description" />
+        android:hint="@string/write_description" />
 
     <ImageView
         android:id="@+id/ivPostImage"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans_semibold"
             android:textColor="@color/text_color_2"
-            android:text="Take Picture"
+            android:text="@string/take_picture"
             android:textAllCaps="false"
             android:layout_marginStart="11dp"
             android:textSize="14sp" />
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans_semibold"
             android:textColor="@color/text_color_2"
-            android:text="Select Media"
+            android:text="@string/select_media"
             android:textAllCaps="false"
             android:layout_marginStart="11dp"
             android:textSize="14sp" />
@@ -114,7 +114,6 @@
             android:layout_marginEnd="5dp"
             android:layout_height="35dp"
             android:backgroundTint="@color/background_color"
-            android:layout_weight="1"
             android:src="@drawable/ic_gallery" />
 
     </LinearLayout>
@@ -132,7 +131,7 @@
         android:background="@drawable/btn_bg"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Submit"
+        android:text="@string/submit"
         android:textColor="@color/text_color_2"
         android:textSize="14sp" />
 
