--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +20,6 @@
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/ivProfile"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp"
         tools:text="username" />
@@ -36,7 +34,7 @@
         android:backgroundTint="@color/blue"
         android:textColor="@color/text_color_2"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="Change Picture"
+        android:text="@string/change_picture"
         android:textAllCaps="false" />
 
     <Button
@@ -49,12 +47,11 @@
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@id/btnUpload"
         android:fontFamily="@font/open_sans_semibold"
-        android:text="Logout"
+        android:text="@string/logout"
         android:textAllCaps="false" />
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeContainer"
         android:layout_below="@+id/ivProfile"
         android:layout_width="match_parent"
